Changes for v1.99preview3
- Add support for notes on device buttons
- Add new protocols and translators
- Add draggable divider to RMs Buttons panel along the left edge of the Available Functions

Changes for v1.99preview2
- Make editable table cells enter edit mode when single-clicked, and auto-select the contents
- Detect bad RDFs where address ranges extend beyond the EEPROM size

Changes for v1.99preview1
- Added Start Menu entries for Windows users.  Run setup.bat
- Prompt to assign a new device upgrade to a device button if not already assigned.
- Make sure Lost Function Assignment warning gets focus when shown.

Changes for v1.98
- Corrected fix for corruption of fixed data when multiple upgrades use the same protocol
- Fix failure to update tabs when downloading from or loading a file for a different remote.

Changes for v1.98beta8
- Fix for Thomson variant 7
- Upgrade to DecodeIR v2.40
- Fix parsing of upgrade setup codes > 2047 on download from remote or import of IR file
- Allow uploading when there is a signature mismatch, after a suitable warning.
- Fix loading of IR files generated by extinstall
- Close IO connection when download is canceled at remote selection dialog.
- Fix corruption of fixed data when multiple upgrades use the same protocol 


Changes for v1.98beta1-beta7
- Enable setup codes up to 4095 for remotes that use 2-byte PIDs
- Tweak column widths
- Allow comments in image map files
- Fix heap usage when viewing LOTS of remote images
- RMIR:
  - Fix jp12 serial driver for 64-bit Linux
  - Fix for macros when AdvCodeBindFormat=LONG
  - Fix warning messages when available space for advanced codes, 
    upgrades, or learned signals is exceeded
  - Fix Settings
  - Fixes for erroneous upload verification failure messages
  - Upgrade to DecodeIR v2.39
  - Add help menu item "Interpreting Decoded IR Signals"
  - Initial MultiMacro support
  - Fix parsing of assigned setup codes > 2047 on download from remote or import of IR file