@@ -1,3 +1,0 @@
-java -cp RemoteMaster.jar Setup
-setup.reg
-Setup.vbs
